# labelme-to-yolo

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  pytest.ini
.github/workflows/: bump-version.yml  publish-package.yml
labelme_to_yolo/: __main__.py  datatypes.py
test/: test_unit_coco_convert.py
test/__data__/yolo_annotations/: 000000000285.json
