[project]
name = "labelme-to-yolo"
version = "0.2.1"
description = "A tool to convert LabelMe dataset annotations into YOLO format for instance segmentation."
license = { text = "MIT" }
authors = [{ name = "Tlaloc-Es", email = "dev@tlaloc-es.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "click", "pydantic", "pyyaml"]

[project.urls]
Homepage = "https://github.com/Tlaloc-Es/labelme-to-yolo"
Repository = "https://github.com/Tlaloc-Es/labelme-to-yolo"

[project.scripts]
labelme2yolo = "labelme_to_yolo.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ipykernel",
    "ipython",
    "commitizen",
    "poethepoet",
    "pre-commit",
]

[tool.poe.tasks]
git_hooks_run = "pre-commit run --all-files"
git_hooks_install = "pre-commit install"
git_hooks_update = "pre-commit autoupdate"
test = "pytest"
test-cov = "pytest --cov=labelme_to_yolo --cov-report=term-missing --cov-report=html"

[tool.commitizen]
version = "0.2.1"
version_files = ["pyproject.toml:^version"]
tag_format = "$version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
